[gd_scene load_steps=46 format=3 uid="uid://b53hvcf0hvvkw"]

[ext_resource type="Script" path="res://ai/tasks/unequipWeapon.gd" id="2_0v6xp"]
[ext_resource type="Script" path="res://ai/tasks/getPosition.gd" id="2_xrxy6"]
[ext_resource type="Script" path="res://ai/tasks/walkToPosition.gd" id="3_y6x7b"]
[ext_resource type="Script" path="res://assets/components/aiComponent/aiComponent.gd" id="4_gaqok"]
[ext_resource type="Script" path="res://ai/tasks/aiEquipWeapon.gd" id="4_hqswl"]
[ext_resource type="BlackboardPlan" uid="uid://y5n7ma7pe4t2" path="res://assets/components/aiComponent/aiPlan.tres" id="4_i5pc7"]
[ext_resource type="Script" path="res://ai/tasks/lookAtPawn.gd" id="5_hbu71"]
[ext_resource type="Script" path="res://ai/tasks/pawnShoot.gd" id="7_xug5t"]
[ext_resource type="Script" path="res://ai/tasks/getPositionToDetectedPawn.gd" id="8_4kek0"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_qvypc"]
var/pawnType/name = "pawnType"
var/pawnType/type = 2
var/pawnType/value = 1
var/pawnType/hint = 2
var/pawnType/hint_string = "Idle,Wander"
var/hasTarget/name = "hasTarget"
var/hasTarget/type = 1
var/hasTarget/value = false
var/hasTarget/hint = 0
var/hasTarget/hint_string = ""
var/pawnTarget/name = "pawnTarget"
var/pawnTarget/type = 24
var/pawnTarget/hint = 0
var/pawnTarget/hint_string = ""
var/hostileGroups/name = "hostileGroups"
var/hostileGroups/type = 28
var/hostileGroups/value = ["Player"]
var/hostileGroups/hint = 0
var/hostileGroups/hint_string = "[String]"
var/navPointGrabber/name = "navPointGrabber"
var/navPointGrabber/type = 24
var/navPointGrabber/hint = 0
var/navPointGrabber/hint_string = ""
var/moveToObject/name = "moveToObject"
var/moveToObject/type = 24
var/moveToObject/hint = 0
var/moveToObject/hint_string = ""
var/navAgent/name = "navAgent"
var/navAgent/type = 24
var/navAgent/hint = 0
var/navAgent/hint_string = ""
var/pawnOwner/name = "pawnOwner"
var/pawnOwner/type = 24
var/pawnOwner/hint = 0
var/pawnOwner/hint_string = ""
var/pawnTargetPos/name = "pawnTargetPos"
var/pawnTargetPos/type = 9
var/pawnTargetPos/value = Vector3(0, 0, 0)
var/pawnTargetPos/hint = 0
var/pawnTargetPos/hint_string = ""
var/pawnDetection/name = "pawnDetection"
var/pawnDetection/type = 3
var/pawnDetection/value = 0.0
var/pawnDetection/hint = 0
var/pawnDetection/hint_string = ""
var/pawnDetectionRate/name = "pawnDetectionRate"
var/pawnDetectionRate/type = 3
var/pawnDetectionRate/value = 0.8
var/pawnDetectionRate/hint = 0
var/pawnDetectionRate/hint_string = "0.8"
var/hasDetectedPawn/name = "hasDetectedPawn"
var/hasDetectedPawn/type = 1
var/hasDetectedPawn/value = false
var/hasDetectedPawn/hint = 0
var/hasDetectedPawn/hint_string = ""
var/visionCastRotation/name = "visionCastRotation"
var/visionCastRotation/type = 9
var/visionCastRotation/value = Vector3(0, 0, 0)
var/visionCastRotation/hint = 0
var/visionCastRotation/hint_string = ""
var/visionCast/name = "visionCast"
var/visionCast/type = 24
var/visionCast/hint = 0
var/visionCast/hint_string = ""
var/aimCast/name = "aimCast"
var/aimCast/type = 24
var/aimCast/hint = 0
var/aimCast/hint_string = ""
var/aimCastEnd/name = "aimCastEnd"
var/aimCastEnd/type = 24
var/aimCastEnd/hint = 0
var/aimCastEnd/hint_string = ""
var/isAttacking/name = "isAttacking"
var/isAttacking/type = 1
var/isAttacking/value = false
var/isAttacking/hint = 0
var/isAttacking/hint_string = ""
resource_local_to_scene = true

[sub_resource type="BBVariant" id="BBVariant_gievn"]
type = 2
saved_value = 0
resource_name = "0"

[sub_resource type="BTCheckVar" id="BTCheckVar_4g5yf"]
variable = "pawnType"
check_type = 5
value = SubResource("BBVariant_gievn")
custom_name = "Check if its an Idle pawn"

[sub_resource type="BBVariant" id="BBVariant_4f3yv"]
type = 1
saved_value = true
resource_name = "true"

[sub_resource type="BTCheckVar" id="BTCheckVar_pno6g"]
variable = "isAttacking"
check_type = 5
value = SubResource("BBVariant_4f3yv")
custom_name = "Check if its  in attack"

[sub_resource type="BBVariant" id="BBVariant_7udq0"]
type = 1
saved_value = true
resource_name = "true"

[sub_resource type="BTCheckVar" id="BTCheckVar_5apl1"]
variable = "hasTarget"
check_type = 5
value = SubResource("BBVariant_7udq0")
custom_name = "If it can see an enemy pawn.."

[sub_resource type="BTAction" id="BTAction_8wghn"]
script = ExtResource("2_0v6xp")

[sub_resource type="BTAction" id="BTAction_rtclt"]
script = ExtResource("2_xrxy6")

[sub_resource type="BTAction" id="BTAction_iflfc"]
resource_local_to_scene = true
script = ExtResource("3_y6x7b")
currLocation = Vector3(0, 0, 0)
newVelocity = Vector3(0, 0, 0)

[sub_resource type="BTSequence" id="BTSequence_ph7u6"]
custom_name = "Wander"
children = [SubResource("BTCheckVar_4g5yf"), SubResource("BTCheckVar_pno6g"), SubResource("BTCheckVar_5apl1"), SubResource("BTAction_8wghn"), SubResource("BTAction_rtclt"), SubResource("BTAction_iflfc")]

[sub_resource type="BBVariant" id="BBVariant_wb7pi"]
type = 1
saved_value = true
resource_name = "true"

[sub_resource type="BTCheckVar" id="BTCheckVar_k1thp"]
variable = "hasDetectedPawn"
value = SubResource("BBVariant_wb7pi")
custom_name = "If is in Detect state"

[sub_resource type="BBVariant" id="BBVariant_h55jq"]
type = 1
saved_value = true
resource_name = "true"

[sub_resource type="BTCheckVar" id="BTCheckVar_ficuq"]
variable = "hasTarget"
value = SubResource("BBVariant_h55jq")

[sub_resource type="BBVariant" id="BBVariant_aiqxi"]
type = 1
value_source = 1
variable = "hasTarget"
resource_name = "$hasTarget"

[sub_resource type="BTSetVar" id="BTSetVar_7hgy8"]
variable = "isAttacking"
value = SubResource("BBVariant_aiqxi")

[sub_resource type="BTAction" id="BTAction_j8thn"]
script = ExtResource("4_hqswl")

[sub_resource type="BTAction" id="BTAction_6ewbf"]
custom_name = "Look at Detected Pawn"
script = ExtResource("5_hbu71")

[sub_resource type="BTAction" id="BTAction_u816v"]
script = ExtResource("8_4kek0")

[sub_resource type="BTAction" id="BTAction_ex6vk"]
script = ExtResource("3_y6x7b")
currLocation = Vector3(0, 0, 0)
newVelocity = Vector3(0, 0, 0)

[sub_resource type="BTAction" id="BTAction_ahq2h"]
script = ExtResource("7_xug5t")

[sub_resource type="BTSequence" id="BTSequence_45qv6"]
custom_name = "AttackSequence"
children = [SubResource("BTCheckVar_k1thp"), SubResource("BTCheckVar_ficuq"), SubResource("BTSetVar_7hgy8"), SubResource("BTAction_j8thn"), SubResource("BTAction_6ewbf"), SubResource("BTAction_u816v"), SubResource("BTAction_ex6vk"), SubResource("BTAction_ahq2h")]

[sub_resource type="BBVariant" id="BBVariant_cudkl"]
type = 3
saved_value = 10.0
resource_name = "10"

[sub_resource type="BTCheckVar" id="BTCheckVar_8bky6"]
variable = "pawnDetection"
check_type = 4
value = SubResource("BBVariant_cudkl")

[sub_resource type="BTAction" id="BTAction_euxt4"]
script = ExtResource("5_hbu71")

[sub_resource type="BTAction" id="BTAction_prprh"]
script = ExtResource("4_hqswl")

[sub_resource type="BTSequence" id="BTSequence_lddtm"]
custom_name = "isDetecting"
children = [SubResource("BTCheckVar_8bky6"), SubResource("BTAction_euxt4"), SubResource("BTAction_prprh")]

[sub_resource type="BTSelector" id="BTSelector_5u274"]
custom_name = "Root"
children = [SubResource("BTSequence_ph7u6"), SubResource("BTSequence_45qv6"), SubResource("BTSequence_lddtm")]

[sub_resource type="BehaviorTree" id="BehaviorTree_y5p2n"]
description = "AI Tree
"
blackboard_plan = SubResource("BlackboardPlan_qvypc")
root_task = SubResource("BTSelector_5u274")
resource_local_to_scene = true

[sub_resource type="SphereShape3D" id="SphereShape3D_102wm"]
radius = 2.58404

[sub_resource type="SphereShape3D" id="SphereShape3D_1ongu"]
radius = 7.78618

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gxudk"]
albedo_color = Color(0, 1, 0.368627, 1)

[sub_resource type="ImmediateMesh" id="ImmediateMesh_t2je8"]

[sub_resource type="Gradient" id="Gradient_4vyck"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 0.32549, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_crd1y"]
gradient = SubResource("Gradient_4vyck")

[node name="aiComponent" type="Node3D" node_paths=PackedStringArray("aiTree", "moveTo", "navAgent", "navPointGrabber", "visionTimer")]
script = ExtResource("4_gaqok")
aiTree = NodePath("aiTree")
moveTo = NodePath("moveTo")
navAgent = NodePath("navAgent")
navPointGrabber = NodePath("navPointGrabber")
visionTimer = NodePath("visionTimer")
hatedPawnGroups = Array[StringName]([&"Player", &"Hostile"])
aimSpeed = 10.0

[node name="aiTree" type="BTPlayer" parent="."]
behavior_tree = SubResource("BehaviorTree_y5p2n")
blackboard_plan = ExtResource("4_i5pc7")

[node name="moveTo" type="Marker3D" parent="."]

[node name="navAgent" type="NavigationAgent3D" parent="."]
target_desired_distance = 5.0
navigation_layers = 9
avoidance_enabled = true
radius = 0.3
avoidance_layers = 9
avoidance_mask = 9
debug_path_custom_color = Color(0.239216, 0.745098, 0, 1)

[node name="navPointGrabber" type="Area3D" parent="."]
collision_layer = 0

[node name="collisionShape3d" type="CollisionShape3D" parent="navPointGrabber"]
shape = SubResource("SphereShape3D_102wm")

[node name="pawnGrabber" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="collisionShape3d" type="CollisionShape3D" parent="pawnGrabber"]
shape = SubResource("SphereShape3D_1ongu")

[node name="rayCast3d" type="RayCast3D" parent="pawnGrabber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.543199, 0)
target_position = Vector3(0, 0, -15)
debug_shape_custom_color = Color(0.67451, 0, 0, 1)

[node name="meshInstance3d" type="MeshInstance3D" parent="pawnGrabber"]
material_override = SubResource("StandardMaterial3D_gxudk")
mesh = SubResource("ImmediateMesh_t2je8")

[node name="visionTimer" type="Timer" parent="."]

[node name="debugPawnStats" type="Label3D" parent="."]
pixel_size = 0.003
offset = Vector2(0, 100)
billboard = 2
text = "Pawn Name - 
Pawn Detection - 
Has Target - 
Has Detected -
"

[node name="sprite3d" type="Sprite3D" parent="."]
transform = Transform3D(0.0686986, 0, 0, 0, 14.1423, 0, 0, 0, 1.0015, 0, 0, 0)
visible = false
texture = SubResource("GradientTexture1D_crd1y")

[node name="aiAimcast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -250)
collision_mask = 19
collide_with_areas = true
debug_shape_custom_color = Color(1, 0.823529, 0, 1)

[node name="aiAimcastEnd" type="Marker3D" parent="aiAimcast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -63.4755)

[connection signal="area_entered" from="pawnGrabber" to="." method="_on_pawn_grabber_area_entered"]
[connection signal="body_entered" from="pawnGrabber" to="." method="_on_pawn_grabber_body_entered"]
[connection signal="body_exited" from="pawnGrabber" to="." method="_on_pawn_grabber_body_exited"]
[connection signal="timeout" from="visionTimer" to="." method="_on_vision_timer_timeout"]
